--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/sample?characterEncoding=UTF-8&serverTimeZone=UTC
 spring.datasource.username=root
-spring.datasource.password=test1234
+spring.datasource.password=1234
 
 # 접속시마다 새로 생성
 spring.jpa.hibernate.ddl-auto=create
